# bug-tracker

./: manage.py  pyproject.toml
api/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_alter_bug_status.py  0003_alter_bug_status.py  0004_alter_bug_status.py  0005_delete_comment.py
api/templates/api/: bug_edit.html  bugs.html  create_project.html  projects.html  report.html
authapp/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
authapp/migrations/: 0001_initial.py
authapp/templates/authapp/: dashboard.html  edit.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register.html  register_done.html
djbugtracker/: asgi.py  settings.py  urls.py  views.py  wsgi.py
static/css/: style.css
templates/: base.html  home.html
